--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^4.0.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
@@ -20,15 +21,15 @@
     "http-errors": "^1.8.0",
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.5.1",
-    "marked": "^1.1.1",
-    "mongoose": "^5.10.3",
+    "marked": "^4.1.1",
+    "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
-    "nodemailer": "^4.4.1",
+    "nodemailer": "^6.8.0",
     "plivo": "^4.8.0",
     "request": "^2.88.2",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.3.0",
-    "swagger-ui-dist": "^3.32.5",
+    "swagger-ui-dist": "^4.14.3",
     "swagger-ui-express": "^3.0.10",
     "uninstall": "0.0.0",
     "winston": "^2.4.5"
@@ -46,7 +47,7 @@
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.22.0",
     "istanbul": "^0.4.5",
-    "mocha": "^5.0.3",
+    "mocha": "^10.0.0",
     "request-promise": "^4.2.6",
     "rimraf": "^2.7.1",
     "supertest": "^3.0.0",
