--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^4.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "formidable": "^1.2.2",
     "helmet": "^3.23.3",
     "http-errors": "^1.8.0",
@@ -25,6 +25,9 @@
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "plivo": "^4.8.0",
     "request": "^2.88.2",
     "serve-favicon": "~2.4.5",
