--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "plivo": "^4.8.0",
     "request": "^2.88.2",
     "serve-favicon": "~2.4.5",
+    "short-unique-id": "^4.4.4",
     "socket.io": "^2.3.0",
     "swagger-ui-dist": "^4.14.3",
     "swagger-ui-express": "^3.0.10",
